public static class AnimatorParameters {
	public const string FIGURE_IDLE = "Idle";
    public const string FIGURE_BLINK = "Blink";
    public const string FIGURE_IS_ENABLED = "isEnabled";
    public const string BUTTON_IS_ENABLED = "isEnabled";
    public const string BUTTON_IS_CLICKED = "isClicked";
    public const string LOW_REWARD_BLINK = "BlinkLowReward";
    public const string MID_REWARD_BLINK = "BlinkMidReward";
    public const string HIGH_REWARD_BLINK = "BlinkHighReward";
    public const string LOW_REWARD_IS_ENABLED = "isLowRewardEnabled";
    public const string MID_REWARD_IS_ENABLED = "isMidRewardEnabled";
    public const string HIGH_REWARD_IS_ENABLED = "isHighRewardEnabled";
}